Scrollbar fix

--- a/static/woodcutter/mainstyle.css
+++ b/static/woodcutter/mainstyle.css
@@ -22,6 +22,7 @@ body{
 .content-container{
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 
 	display: flex;
 	flex-direction: column;
@@ -33,7 +34,8 @@ body{
 .content-container-row{
 	height: 100%;
 	width: 100%;
-
+	overflow: hidden;
+	
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
